--- a/server_public/index.html
+++ b/server_public/index.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/react.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css"></link>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
   </head>
   <body>
     <div id="content" class="container-fluid"></div>
