chore: sync fron upstream

--- a/custom/less/ui-icon.html
+++ b/custom/less/ui-icon.html
@@ -81,8 +81,8 @@ Sep 16, 2015
 
 
 /* Bootstrap Overrides */
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
+[class^="icon-"],
+[class*=" icon-"] {
   font-family:"ui-icon";
   display:inline-block;
   vertical-align:middle;
